[gd_scene load_steps=29 format=2]

[ext_resource path="res://Assets/image/gem/blue.png" type="Texture" id=1]
[ext_resource path="res://Assets/image/gem/green.png" type="Texture" id=2]
[ext_resource path="res://Assets/image/gem/red.png" type="Texture" id=3]
[ext_resource path="res://Assets/image/gem/brown.png" type="Texture" id=4]
[ext_resource path="res://Assets/image/gem/white.png" type="Texture" id=5]
[ext_resource path="res://Player/Hand.gd" type="Script" id=6]
[ext_resource path="res://Assets/image/gem/gold.png" type="Texture" id=7]
[ext_resource path="res://Assets/font/fzmw.tres" type="DynamicFont" id=8]
[ext_resource path="res://Card/Card.tscn" type="PackedScene" id=9]

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false

[sub_resource type="StyleBoxFlat" id=2]
draw_center = false

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0431373, 0.0941176, 0.509804, 1 )
draw_center = false
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.00392157, 0.356863, 0.6, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.258824, 0.12549, 0.027451, 1 )
draw_center = false
border_width_left = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.364706, 0.2, 0.137255, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.137255, 0.494118, 0.0392157, 1 )
draw_center = false
border_width_left = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.0470588, 0.466667, 0.247059, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.752941, 0.109804, 0.109804, 1 )
draw_center = false
border_width_top = 5
border_width_bottom = 5
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.682353, 0.207843, 0.235294, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 1, 1, 1, 1 )
draw_center = false
border_width_bottom = 5
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.858824, 0.615686, 0.105882, 1 )
draw_center = false
border_width_bottom = 5
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=14]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.803922, 0.27451, 0.27451, 1 )
draw_center = false
border_width_left = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFontData" id=16]
font_path = "res://Assets/font/fzmw.ttf"

[sub_resource type="DynamicFont" id=17]
size = 40
font_data = SubResource( 16 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.211765, 0.0627451, 0.0627451, 1 )
draw_center = false
border_width_left = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.603922, 0.278431, 0.278431, 1 )
draw_center = false
border_width_left = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[node name="Hand" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -997.0
margin_bottom = -635.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
Card = ExtResource( 9 )

[node name="Resource" type="Panel" parent="."]
anchor_left = -0.000212307
anchor_top = -0.000754533
anchor_right = -0.000212307
anchor_bottom = -0.000754533
margin_left = 0.127998
margin_top = 0.199951
margin_right = 256.222
margin_bottom = 264.2
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="Blue" type="Panel" parent="Resource"]
margin_top = 0.108887
margin_right = 427.0
margin_bottom = 293.109
rect_scale = Vector2( 0.3, 0.3 )
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Card" type="Label" parent="Resource/Blue"]
margin_left = 77.7187
margin_top = 25.5389
margin_right = 117.719
margin_bottom = 78.5389
custom_styles/normal = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gem" type="Sprite" parent="Resource/Blue"]
position = Vector2( 339.162, 58.3053 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="CardCounter" type="Label" parent="Resource/Blue"]
margin_left = 1.25085
margin_top = 97.783
margin_right = 221.251
margin_bottom = 297.783
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GemCounter" type="Label" parent="Resource/Blue"]
margin_left = 219.753
margin_top = 98.7965
margin_right = 439.753
margin_bottom = 298.797
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Brown" type="Panel" parent="Resource"]
margin_top = 88.1089
margin_right = 427.0
margin_bottom = 381.109
rect_scale = Vector2( 0.3, 0.3 )
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Card" type="Label" parent="Resource/Brown"]
margin_left = 77.7187
margin_top = 25.5389
margin_right = 117.719
margin_bottom = 78.5389
custom_styles/normal = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gem" type="Sprite" parent="Resource/Brown"]
position = Vector2( 339.162, 58.3053 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )

[node name="CardCounter" type="Label" parent="Resource/Brown"]
margin_left = 1.25085
margin_top = 97.783
margin_right = 221.251
margin_bottom = 297.783
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GemCounter" type="Label" parent="Resource/Brown"]
margin_left = 219.753
margin_top = 98.7965
margin_right = 439.753
margin_bottom = 298.797
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Green" type="Panel" parent="Resource"]
margin_top = 176.0
margin_right = 427.0
margin_bottom = 469.0
rect_scale = Vector2( 0.3, 0.3 )
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Card" type="Label" parent="Resource/Green"]
margin_left = 77.7187
margin_top = 25.5389
margin_right = 117.719
margin_bottom = 78.5389
custom_styles/normal = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gem" type="Sprite" parent="Resource/Green"]
position = Vector2( 339.162, 58.3053 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[node name="CardCounter" type="Label" parent="Resource/Green"]
margin_left = 1.25085
margin_top = 97.783
margin_right = 221.251
margin_bottom = 297.783
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GemCounter" type="Label" parent="Resource/Green"]
margin_left = 219.753
margin_top = 98.7965
margin_right = 439.753
margin_bottom = 298.797
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Red" type="Panel" parent="Resource"]
margin_left = 128.0
margin_top = 0.108887
margin_right = 555.0
margin_bottom = 293.109
rect_scale = Vector2( 0.3, 0.3 )
custom_styles/panel = SubResource( 9 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Card" type="Label" parent="Resource/Red"]
margin_left = 77.7187
margin_top = 25.5389
margin_right = 117.719
margin_bottom = 78.5389
custom_styles/normal = SubResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gem" type="Sprite" parent="Resource/Red"]
position = Vector2( 339.162, 58.3053 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[node name="CardCounter" type="Label" parent="Resource/Red"]
margin_left = 1.25085
margin_top = 97.783
margin_right = 221.251
margin_bottom = 297.783
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GemCounter" type="Label" parent="Resource/Red"]
margin_left = 219.753
margin_top = 98.7965
margin_right = 439.753
margin_bottom = 298.797
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="White" type="Panel" parent="Resource"]
margin_left = 128.0
margin_top = 88.1089
margin_right = 555.0
margin_bottom = 381.109
rect_scale = Vector2( 0.3, 0.3 )
custom_styles/panel = SubResource( 11 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Card" type="Label" parent="Resource/White"]
margin_left = 77.7187
margin_top = 25.5389
margin_right = 117.719
margin_bottom = 78.5389
custom_styles/normal = SubResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gem" type="Sprite" parent="Resource/White"]
position = Vector2( 339.162, 58.3053 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )

[node name="CardCounter" type="Label" parent="Resource/White"]
margin_left = 1.25085
margin_top = 97.783
margin_right = 221.251
margin_bottom = 297.783
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GemCounter" type="Label" parent="Resource/White"]
margin_left = 219.753
margin_top = 98.7965
margin_right = 439.753
margin_bottom = 298.797
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gold" type="Panel" parent="Resource"]
margin_left = 128.0
margin_top = 176.109
margin_right = 555.0
margin_bottom = 469.109
rect_scale = Vector2( 0.3, 0.3 )
custom_styles/panel = SubResource( 13 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Gem" type="Sprite" parent="Resource/Gold"]
position = Vector2( 214.886, 58.3047 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 7 )

[node name="GemCounter" type="Label" parent="Resource/Gold"]
margin_top = 99.0
margin_right = 440.0
margin_bottom = 299.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReservedCard" type="Panel" parent="."]
margin_left = 255.0
margin_right = 602.0
margin_bottom = 176.0
custom_styles/panel = SubResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReservedCardCounter" type="Label" parent="ReservedCard"]
margin_left = 284.0
margin_right = 349.0
margin_bottom = 47.0
custom_styles/normal = SubResource( 15 )
custom_fonts/font = SubResource( 17 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0/3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Card0" parent="ReservedCard" instance=ExtResource( 9 )]
position = Vector2( 58, 112 )
scale = Vector2( 0.7, 0.7 )

[node name="Card1" parent="ReservedCard" instance=ExtResource( 9 )]
position = Vector2( 151, 112 )
scale = Vector2( 0.7, 0.7 )
cost = {
"blue": 0,
"brown": 0,
"green": 0,
"red": 0,
"white": 0
}

[node name="Card2" parent="ReservedCard" instance=ExtResource( 9 )]
position = Vector2( 243, 112 )
scale = Vector2( 0.7, 0.7 )
cost = {
"blue": 0,
"brown": 0,
"green": 0,
"red": 0,
"white": 0
}

[node name="Nobility" type="Panel" parent="."]
margin_left = 255.0
margin_top = 176.0
margin_right = 603.0
margin_bottom = 264.0
custom_styles/panel = SubResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
margin_left = 539.0
margin_top = 176.0
margin_right = 603.0
margin_bottom = 234.0
custom_styles/normal = SubResource( 19 )
custom_fonts/font = SubResource( 17 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
